<resources>
    <string name="app_name">Friends</string>
    <string name="action_settings">Settings</string>
    <string name="reset">RESET</string>
    <string name="add">ADD</string>
    <string name="delete">DELETE</string>
    <string name="update">UPDATE</string>

    <string name="label_firstname">First Name</string>
    <string name="label_lastname">Last Name</string>
    <string name="label_email">Email</string>
    <string name="button_add">ADD</string>
    <string name="button_back">BACK</string>
</resources>