<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/first_name"
        android:layout_marginTop="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_firstname"/>

    <EditText
        android:id="@+id/input_first_name"
        android:layout_toRightOf="@+id/first_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/first_name"
        android:layout_marginLeft="50dp"
        android:orientation="horizontal" />

    <TextView
        android:id="@+id/last_name"
        android:layout_marginTop="50dp"
        android:layout_below="@id/first_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_lastname"/>

    <EditText
        android:id="@+id/input_last_name"
        android:layout_toRightOf="@+id/last_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/last_name"
        android:layout_marginLeft="50dp"
        android:orientation="horizontal" />

    <TextView
        android:id="@+id/email"
        android:layout_marginTop="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/last_name"
        android:text="@string/label_email"/>

    <EditText
        android:id="@+id/input_email"
        android:layout_toRightOf="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/email"
        android:inputType="textEmailAddress"
        android:layout_marginLeft="50dp"
        android:orientation="horizontal" />

    <Button
        android:id="@+id/button_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/email"
        android:layout_marginTop="50dp"
        android:onClick="insert"
        android:text="@string/button_add" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/button_add"
        android:layout_marginTop="50dp"
        android:onClick="goBack"
        android:text="@string/button_back" />
</RelativeLayout>